Whitespace fixes, removed pointless scss

--- a/resources/assets/sass/pages/_skills.scss
+++ b/resources/assets/sass/pages/_skills.scss
@@ -3,13 +3,6 @@
     color: $white;
   }
 
-  ul {
-    margin-left: 0;
-    > li > ul {
-      margin-left: 1rem;
-    }
-  }
-
   .card {
     background-color: inherit;
     box-shadow: none;
